@@ -247,6 +247,7 @@ i18n / Languages:
 * (bug 5097) Fix Hungarian language (hu): thousands separator
 * (bug 5098) Update for Portuguese messages (pt)
 * (bug 5113) Spelling error in French language file
+* (bug 5105) Magic words for LanguageAr.php
 
 Parser:
 * (bug 2522) {{CURRENTDAY2}} now shows the current day number with two digits
